--- a/vue2-elm/package.json
+++ b/vue2-elm/package.json
@@ -45,7 +45,7 @@
     "less-loader": "^2.2.3",
     "node-gyp": "^3.4.0",
     "node-sass": "^4.9.2",
-    "opn": "^4.0.2",
+    "open": "^7.2.1",
     "ora": "^0.3.0",
     "sass": "^0.5.0",
     "sass-loader": "^4.1.1",
